--- a/src/Map.css
+++ b/src/Map.css
@@ -30,6 +30,10 @@ body.theme-dark .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl-geocoder--input {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
+.mapboxgl-ctrl-geocoder--input:focus {
+  outline: none;
+}
+
 .mapboxgl-ctrl-group {
   box-shadow: none !important;
 }
@@ -135,20 +139,6 @@ body.show-city-picker .mapboxgl-ctrl-top-left .mapboxgl-ctrl-geocoder {
 
   .mapboxgl-ctrl.mapboxgl-ctrl-group {
     border-radius: 99px;
-  }
-
-  .mapboxgl-ctrl-top-left .mapboxgl-ctrl-geocoder {
-    width: 90%;
-    margin-left: -45%;
-    font-size: 16px;
-    padding: inherit;
-  }
-
-  .mapboxgl-ctrl-top-left .mapboxgl-ctrl-geocoder--icon-search {
-    top: 15px;
-    left: 12px;
-    width: 22px;
-    height: 22px;
   }
 
   .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
